# JWQTTemplateDataModel

./: CMakeLists.txt  Main.qml  README.md  dataobjectinterface.h  jwqt_macros.h  jwqtidobjectinterface.cpp  jwqtidobjectinterface.h  jwqtmodelinterface.cpp  jwqtmodelinterface.h  jwqtobjectinterface.cpp  jwqtobjectinterface.h  jwqttemplatemodel.cpp  jwqttemplatemodel.h  jwqttemplatemodelinterface.cpp  jwqttemplatemodelinterface.h  main.cpp
exampleImplementations/: stringandintobject.cpp  stringandintobject.h
